gradle.build in WebApi is corrected to use addModules functio        options.compilerArgs = ["--module-path", classpath.asPath]n